[Calendar] Moves JS to separate file, fixes issue with participants list not showing

--- a/cap_portal/calendar_app/static/calendar_app/styles.css
+++ b/cap_portal/calendar_app/static/calendar_app/styles.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 #readonly-message {
-    font-style: bold;
+    font-weight: bold;
     color: #ff4545;
 }
 
